Fix Android unit-test file API compatibility